Assignment-5/asgn5_19CS10064_19CS30008/asgn5_19CS10064_19CS30008.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 X: %empty

    4 F: %empty

    5 W: %empty

    6 D: %empty

    7 change_table: %empty

    8 primary_expression: IDENTIFIER
    9                   | constant
   10                   | STRING_LITERAL
   11                   | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

   12 constant: INTEGER_CONSTANT
   13         | FLOATING_CONSTANT
   14         | CHAR_CONSTANT

   15 postfix_expression: primary_expression
   16                   | postfix_expression SQUARE_BRACE_OPEN expression SQUARE_BRACE_CLOSE
   17                   | postfix_expression PARENTHESIS_OPEN argument_expression_list_opt PARENTHESIS_CLOSE
   18                   | postfix_expression DOT IDENTIFIER
   19                   | postfix_expression ARROW IDENTIFIER
   20                   | postfix_expression INCREMENT
   21                   | postfix_expression DECREMENT
   22                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
   23                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

   24 argument_expression_list_opt: argument_expression_list
   25                             | %empty

   26 argument_expression_list: assignment_expression
   27                         | argument_expression_list COMMA assignment_expression

   28 unary_expression: postfix_expression
   29                 | INCREMENT unary_expression
   30                 | DECREMENT unary_expression
   31                 | unary_operator cast_expression
   32                 | SIZEOF unary_expression
   33                 | SIZEOF PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE

   34 unary_operator: BITWISE_AND
   35               | MULTIPLY
   36               | ADD
   37               | SUBTRACT
   38               | BITWISE_NOR
   39               | NOT

   40 cast_expression: unary_expression
   41                | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE cast_expression

   42 multiplicative_expression: cast_expression
   43                          | multiplicative_expression MULTIPLY cast_expression
   44                          | multiplicative_expression DIVIDE cast_expression
   45                          | multiplicative_expression MODULO cast_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression ADD multiplicative_expression
   48                    | additive_expression SUBTRACT multiplicative_expression

   49 shift_expression: additive_expression
   50                 | shift_expression LSHIFT additive_expression
   51                 | shift_expression RSHIFT additive_expression

   52 relational_expression: shift_expression
   53                      | relational_expression LESS_THAN shift_expression
   54                      | relational_expression GREATER_THAN shift_expression
   55                      | relational_expression LESS_THAN_EQUAL shift_expression
   56                      | relational_expression GREATER_THAN_EQUAL shift_expression

   57 equality_expression: relational_expression
   58                    | equality_expression EQUAL relational_expression
   59                    | equality_expression NOT_EQUAL relational_expression

   60 and_expression: equality_expression
   61               | and_expression BITWISE_AND equality_expression

   62 exclusive_or_expression: and_expression
   63                        | exclusive_or_expression BITWISE_XOR and_expression

   64 inclusive_or_expression: exclusive_or_expression
   65                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   66 logical_and_expression: inclusive_or_expression
   67                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   68 logical_or_expression: logical_and_expression
   69                      | logical_or_expression LOGICAL_OR M logical_and_expression

   70 conditional_expression: logical_or_expression
   71                       | logical_or_expression N QUESTION_MARK M expression N COLON M conditional_expression

   72 assignment_expression: conditional_expression
   73                      | unary_expression assignment_operator assignment_expression

   74 assignment_operator: ASSIGN
   75                    | MULTIPLY_ASSIGN
   76                    | DIVIDE_ASSIGN
   77                    | MODULO_ASSIGN
   78                    | ADD_ASSIGN
   79                    | SUBTRACT_ASSIGN
   80                    | LSHIFT_ASSIGN
   81                    | RSHIFT_ASSIGN
   82                    | AND_ASSIGN
   83                    | XOR_ASSIGN
   84                    | OR_ASSIGN

   85 expression: assignment_expression
   86           | expression COMMA assignment_expression

   87 constant_expression: conditional_expression

   88 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   89 init_declarator_list_opt: init_declarator_list
   90                         | %empty

   91 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   92                       | type_specifier declaration_specifiers_opt
   93                       | type_qualifier declaration_specifiers_opt
   94                       | function_specifier declaration_specifiers_opt

   95 declaration_specifiers_opt: declaration_specifiers
   96                           | %empty

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator
  100                | declarator ASSIGN initializer

  101 storage_class_specifier: EXTERN
  102                        | STATIC
  103                        | AUTO
  104                        | REGISTER

  105 type_specifier: VOID
  106               | CHAR
  107               | SHORT
  108               | INT
  109               | LONG
  110               | FLOAT
  111               | DOUBLE
  112               | SIGNED
  113               | UNSIGNED
  114               | BOOL
  115               | COMPLEX
  116               | IMAGINARY
  117               | enum_specifier

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  119                         | type_qualifier specifier_qualifier_list_opt

  120 specifier_qualifier_list_opt: specifier_qualifier_list
  121                             | %empty

  122 enum_specifier: ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  123               | ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  124               | ENUM IDENTIFIER

  125 identifier_opt: IDENTIFIER
  126               | %empty

  127 enumerator_list: enumerator
  128                | enumerator_list COMMA enumerator

  129 enumerator: IDENTIFIER
  130           | IDENTIFIER ASSIGN constant_expression

  131 type_qualifier: CONST
  132               | RESTRICT
  133               | VOLATILE

  134 function_specifier: INLINE

  135 declarator: pointer direct_declarator
  136           | direct_declarator

  137 direct_declarator: IDENTIFIER
  138                  | PARENTHESIS_OPEN declarator PARENTHESIS_CLOSE
  139                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list assignment_expression SQUARE_BRACE_CLOSE
  140                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list SQUARE_BRACE_CLOSE
  141                  | direct_declarator SQUARE_BRACE_OPEN assignment_expression SQUARE_BRACE_CLOSE
  142                  | direct_declarator SQUARE_BRACE_OPEN SQUARE_BRACE_CLOSE
  143                  | direct_declarator SQUARE_BRACE_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACE_CLOSE
  144                  | direct_declarator SQUARE_BRACE_OPEN STATIC assignment_expression SQUARE_BRACE_CLOSE
  145                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACE_CLOSE
  146                  | direct_declarator SQUARE_BRACE_OPEN type_qualifier_list MULTIPLY SQUARE_BRACE_CLOSE
  147                  | direct_declarator SQUARE_BRACE_OPEN MULTIPLY SQUARE_BRACE_CLOSE
  148                  | direct_declarator PARENTHESIS_OPEN change_table parameter_type_list PARENTHESIS_CLOSE
  149                  | direct_declarator PARENTHESIS_OPEN identifier_list PARENTHESIS_CLOSE
  150                  | direct_declarator PARENTHESIS_OPEN change_table PARENTHESIS_CLOSE

  151 type_qualifier_list_opt: type_qualifier_list
  152                        | %empty

  153 pointer: MULTIPLY type_qualifier_list_opt
  154        | MULTIPLY type_qualifier_list_opt pointer

  155 type_qualifier_list: type_qualifier
  156                    | type_qualifier_list type_qualifier

  157 parameter_type_list: parameter_list
  158                    | parameter_list COMMA ELLIPSIS

  159 parameter_list: parameter_declaration
  160               | parameter_list COMMA parameter_declaration

  161 parameter_declaration: declaration_specifiers declarator
  162                      | declaration_specifiers

  163 identifier_list: IDENTIFIER
  164                | identifier_list COMMA IDENTIFIER

  165 type_name: specifier_qualifier_list

  166 initializer: assignment_expression
  167            | CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
  168            | CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

  169 initializer_list: designation_opt initializer
  170                 | initializer_list COMMA designation_opt initializer

  171 designation_opt: designation
  172                | %empty

  173 designation: designator_list ASSIGN

  174 designator_list: designator
  175                | designator_list designator

  176 designator: SQUARE_BRACE_OPEN constant_expression SQUARE_BRACE_CLOSE
  177           | DOT IDENTIFIER

  178 statement: labeled_statement
  179          | compound_statement
  180          | expression_statement
  181          | selection_statement
  182          | iteration_statement
  183          | jump_statement

  184 loop_statement: labeled_statement
  185               | expression_statement
  186               | selection_statement
  187               | iteration_statement
  188               | jump_statement

  189 labeled_statement: IDENTIFIER COLON statement
  190                  | CASE constant_expression COLON statement
  191                  | DEFAULT COLON statement

  192 compound_statement: CURLY_BRACE_OPEN X change_table block_item_list_opt CURLY_BRACE_CLOSE

  193 block_item_list_opt: block_item_list
  194                    | %empty

  195 block_item_list: block_item
  196                | block_item_list M block_item

  197 block_item: declaration
  198           | statement

  199 expression_statement: expression SEMICOLON
  200                     | SEMICOLON

  201 selection_statement: IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N
  202                    | IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N ELSE M statement
  203                    | SWITCH PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement

  204 iteration_statement: WHILE W PARENTHESIS_OPEN X change_table M expression PARENTHESIS_CLOSE M loop_statement
  205                    | WHILE W PARENTHESIS_OPEN X change_table M expression PARENTHESIS_CLOSE CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE
  206                    | DO D M loop_statement M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMICOLON
  207                    | DO D CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMICOLON
  208                    | FOR F PARENTHESIS_OPEN X change_table declaration M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  209                    | FOR F PARENTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  210                    | FOR F PARENTHESIS_OPEN X change_table declaration M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE
  211                    | FOR F PARENTHESIS_OPEN X change_table expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  212 jump_statement: GOTO IDENTIFIER SEMICOLON
  213               | CONTINUE SEMICOLON
  214               | BREAK SEMICOLON
  215               | RETURN expression SEMICOLON
  216               | RETURN SEMICOLON

  217 translation_unit: external_declaration
  218                 | translation_unit external_declaration

  219 external_declaration: function_definition
  220                     | declaration

  221 function_definition: declaration_specifiers declarator declaration_list_opt change_table CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  222 declaration_list_opt: declaration_list
  223                     | %empty

  224 declaration_list: declaration
  225                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 103
    BREAK (259) 214
    CASE (260) 190
    CHAR (261) 106
    CONST (262) 131
    CONTINUE (263) 213
    DEFAULT (264) 191
    DO (265) 206 207
    DOUBLE (266) 111
    ELSE (267) 202
    ENUM (268) 122 123 124
    EXTERN (269) 101
    FLOAT (270) 110
    FOR (271) 208 209 210 211
    GOTO (272) 212
    IF (273) 201 202
    INLINE (274) 134
    INT (275) 108
    LONG (276) 109
    REGISTER (277) 104
    RESTRICT (278) 132
    RETURN (279) 215 216
    SHORT (280) 107
    SIGNED (281) 112
    SIZEOF (282) 32 33
    STATIC (283) 102 143 144 145
    STRUCT (284)
    SWITCH (285) 203
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 113
    VOID (289) 105
    VOLATILE (290) 133
    WHILE (291) 204 205 206 207
    BOOL (292) 114
    COMPLEX (293) 115
    IMAGINARY (294) 116
    SQUARE_BRACE_OPEN (295) 16 139 140 141 142 143 144 145 146 147 176
    SQUARE_BRACE_CLOSE (296) 16 139 140 141 142 143 144 145 146 147 176
    PARENTHESIS_OPEN (297) 11 17 22 23 33 41 138 148 149 150 201 202 203 204 205 206 207 208 209 210 211
    PARENTHESIS_CLOSE (298) 11 17 22 23 33 41 138 148 149 150 201 202 203 204 205 206 207 208 209 210 211
    CURLY_BRACE_OPEN (299) 22 23 122 123 167 168 192 205 207 210 211 221
    CURLY_BRACE_CLOSE (300) 22 23 122 123 167 168 192 205 207 210 211 221
    DOT (301) 18 177
    ARROW (302) 19
    INCREMENT (303) 20 29
    DECREMENT (304) 21 30
    BITWISE_AND (305) 34 61
    MULTIPLY (306) 35 43 146 147 153 154
    ADD (307) 36 47
    SUBTRACT (308) 37 48
    BITWISE_NOR (309) 38
    NOT (310) 39
    DIVIDE (311) 44
    MODULO (312) 45
    LSHIFT (313) 50
    RSHIFT (314) 51
    LESS_THAN (315) 53
    GREATER_THAN (316) 54
    LESS_THAN_EQUAL (317) 55
    GREATER_THAN_EQUAL (318) 56
    EQUAL (319) 58
    NOT_EQUAL (320) 59
    BITWISE_XOR (321) 63
    BITWISE_OR (322) 65
    LOGICAL_AND (323) 67
    LOGICAL_OR (324) 69
    QUESTION_MARK (325) 71
    COLON (326) 71 189 190 191
    SEMICOLON (327) 88 199 200 206 207 212 213 214 215 216
    ELLIPSIS (328) 158
    ASSIGN (329) 74 100 130 173
    MULTIPLY_ASSIGN (330) 75
    DIVIDE_ASSIGN (331) 76
    MODULO_ASSIGN (332) 77
    ADD_ASSIGN (333) 78
    SUBTRACT_ASSIGN (334) 79
    LSHIFT_ASSIGN (335) 80
    RSHIFT_ASSIGN (336) 81
    AND_ASSIGN (337) 82
    XOR_ASSIGN (338) 83
    OR_ASSIGN (339) 84
    COMMA (340) 23 27 86 98 123 128 158 160 164 168 170
    HASH (341)
    IDENTIFIER <symp> (342) 8 18 19 124 125 129 130 137 163 164 177 189 212
    INTEGER_CONSTANT <intval> (343) 12
    FLOATING_CONSTANT <charval> (344) 13
    CHAR_CONSTANT <charval> (345) 14
    STRING_LITERAL <charval> (346) 10
    THEN (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    M <instr> (94)
        on left: 1
        on right: 67 69 71 196 201 202 204 205 206 207 208 209 210 211
    N <stmt> (95)
        on left: 2
        on right: 71 201 202 208 209 210 211
    X (96)
        on left: 3
        on right: 192 204 205 208 209 210 211
    F (97)
        on left: 4
        on right: 208 209 210 211
    W (98)
        on left: 5
        on right: 204 205
    D (99)
        on left: 6
        on right: 206 207
    change_table (100)
        on left: 7
        on right: 148 150 192 204 205 208 209 210 211 221
    primary_expression <expr> (101)
        on left: 8 9 10 11
        on right: 15
    constant <symp> (102)
        on left: 12 13 14
        on right: 9
    postfix_expression <arr> (103)
        on left: 15 16 17 18 19 20 21 22 23
        on right: 16 17 18 19 20 21 28
    argument_expression_list_opt <numParams> (104)
        on left: 24 25
        on right: 17
    argument_expression_list <numParams> (105)
        on left: 26 27
        on right: 24 27
    unary_expression <arr> (106)
        on left: 28 29 30 31 32 33
        on right: 29 30 32 40 73
    unary_operator <unaryOp> (107)
        on left: 34 35 36 37 38 39
        on right: 31
    cast_expression <arr> (108)
        on left: 40 41
        on right: 31 41 42 43 44 45
    multiplicative_expression <expr> (109)
        on left: 42 43 44 45
        on right: 43 44 45 46 47 48
    additive_expression <expr> (110)
        on left: 46 47 48
        on right: 47 48 49 50 51
    shift_expression <expr> (111)
        on left: 49 50 51
        on right: 50 51 52 53 54 55 56
    relational_expression <expr> (112)
        on left: 52 53 54 55 56
        on right: 53 54 55 56 57 58 59
    equality_expression <expr> (113)
        on left: 57 58 59
        on right: 58 59 60 61
    and_expression <expr> (114)
        on left: 60 61
        on right: 61 62 63
    exclusive_or_expression <expr> (115)
        on left: 62 63
        on right: 63 64 65
    inclusive_or_expression <expr> (116)
        on left: 64 65
        on right: 65 66 67
    logical_and_expression <expr> (117)
        on left: 66 67
        on right: 67 68 69
    logical_or_expression <expr> (118)
        on left: 68 69
        on right: 69 70 71
    conditional_expression <expr> (119)
        on left: 70 71
        on right: 71 72 87
    assignment_expression <expr> (120)
        on left: 72 73
        on right: 26 27 73 85 86 139 141 143 144 145 166
    assignment_operator (121)
        on left: 74 75 76 77 78 79 80 81 82 83 84
        on right: 73
    expression <expr> (122)
        on left: 85 86
        on right: 11 16 71 86 199 201 202 203 204 205 206 207 208 209 210 211 215
    constant_expression (123)
        on left: 87
        on right: 130 176 190
    declaration (124)
        on left: 88
        on right: 197 208 210 220 224 225
    init_declarator_list_opt (125)
        on left: 89 90
        on right: 88
    declaration_specifiers (126)
        on left: 91 92 93 94
        on right: 88 95 161 162 221
    declaration_specifiers_opt (127)
        on left: 95 96
        on right: 91 92 93 94
    init_declarator_list (128)
        on left: 97 98
        on right: 89 98
    init_declarator <symp> (129)
        on left: 99 100
        on right: 97 98
    storage_class_specifier (130)
        on left: 101 102 103 104
        on right: 91
    type_specifier (131)
        on left: 105 106 107 108 109 110 111 112 113 114 115 116 117
        on right: 92 118
    specifier_qualifier_list (132)
        on left: 118 119
        on right: 120 165
    specifier_qualifier_list_opt (133)
        on left: 120 121
        on right: 118 119
    enum_specifier (134)
        on left: 122 123 124
        on right: 117
    identifier_opt (135)
        on left: 125 126
        on right: 122 123
    enumerator_list (136)
        on left: 127 128
        on right: 122 123 128
    enumerator (137)
        on left: 129 130
        on right: 127 128
    type_qualifier (138)
        on left: 131 132 133
        on right: 93 119 155 156
    function_specifier (139)
        on left: 134
        on right: 94
    declarator <symp> (140)
        on left: 135 136
        on right: 99 100 138 161 221
    direct_declarator <symp> (141)
        on left: 137 138 139 140 141 142 143 144 145 146 147 148 149 150
        on right: 135 136 139 140 141 142 143 144 145 146 147 148 149 150
    type_qualifier_list_opt (142)
        on left: 151 152
        on right: 153 154
    pointer <symType> (143)
        on left: 153 154
        on right: 135 154
    type_qualifier_list (144)
        on left: 155 156
        on right: 139 140 143 145 146 151 156
    parameter_type_list (145)
        on left: 157 158
        on right: 148
    parameter_list (146)
        on left: 159 160
        on right: 157 158 160
    parameter_declaration (147)
        on left: 161 162
        on right: 159 160
    identifier_list (148)
        on left: 163 164
        on right: 149 164
    type_name (149)
        on left: 165
        on right: 22 23 33 41
    initializer <symp> (150)
        on left: 166 167 168
        on right: 100 169 170
    initializer_list (151)
        on left: 169 170
        on right: 22 23 167 168 170
    designation_opt (152)
        on left: 171 172
        on right: 169 170
    designation (153)
        on left: 173
        on right: 171
    designator_list (154)
        on left: 174 175
        on right: 173 175
    designator (155)
        on left: 176 177
        on right: 174 175
    statement <stmt> (156)
        on left: 178 179 180 181 182 183
        on right: 189 190 191 198 201 202 203
    loop_statement <stmt> (157)
        on left: 184 185 186 187 188
        on right: 204 206 208 209
    labeled_statement <stmt> (158)
        on left: 189 190 191
        on right: 178 184
    compound_statement <stmt> (159)
        on left: 192
        on right: 179
    block_item_list_opt <stmt> (160)
        on left: 193 194
        on right: 192 205 207 210 211 221
    block_item_list <stmt> (161)
        on left: 195 196
        on right: 193 196
    block_item <stmt> (162)
        on left: 197 198
        on right: 195 196
    expression_statement <expr> (163)
        on left: 199 200
        on right: 180 185 208 209 210 211
    selection_statement <stmt> (164)
        on left: 201 202 203
        on right: 181 186
    iteration_statement <stmt> (165)
        on left: 204 205 206 207 208 209 210 211
        on right: 182 187
    jump_statement <stmt> (166)
        on left: 212 213 214 215 216
        on right: 183 188
    translation_unit (167)
        on left: 217 218
        on right: 0 218
    external_declaration (168)
        on left: 219 220
        on right: 217 218
    function_definition (169)
        on left: 221
        on right: 219
    declaration_list_opt (170)
        on left: 222 223
        on right: 221
    declaration_list (171)
        on left: 224 225
        on right: 222 225


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  103 storage_class_specifier: AUTO .

    $default  reduce using rule 103 (storage_class_specifier)


State 2

  106 type_specifier: CHAR .

    $default  reduce using rule 106 (type_specifier)


State 3

  131 type_qualifier: CONST .

    $default  reduce using rule 131 (type_qualifier)


State 4

  111 type_specifier: DOUBLE .

    $default  reduce using rule 111 (type_specifier)


State 5

  122 enum_specifier: ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  123               | ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 126 (identifier_opt)

    identifier_opt  go to state 33


State 6

  101 storage_class_specifier: EXTERN .

    $default  reduce using rule 101 (storage_class_specifier)


State 7

  110 type_specifier: FLOAT .

    $default  reduce using rule 110 (type_specifier)


State 8

  134 function_specifier: INLINE .

    $default  reduce using rule 134 (function_specifier)


State 9

  108 type_specifier: INT .

    $default  reduce using rule 108 (type_specifier)


State 10

  109 type_specifier: LONG .

    $default  reduce using rule 109 (type_specifier)


State 11

  104 storage_class_specifier: REGISTER .

    $default  reduce using rule 104 (storage_class_specifier)


State 12

  132 type_qualifier: RESTRICT .

    $default  reduce using rule 132 (type_qualifier)


State 13

  107 type_specifier: SHORT .

    $default  reduce using rule 107 (type_specifier)


State 14

  112 type_specifier: SIGNED .

    $default  reduce using rule 112 (type_specifier)


State 15

  102 storage_class_specifier: STATIC .

    $default  reduce using rule 102 (storage_class_specifier)


State 16

  113 type_specifier: UNSIGNED .

    $default  reduce using rule 113 (type_specifier)


State 17

  105 type_specifier: VOID .

    $default  reduce using rule 105 (type_specifier)


State 18

  133 type_qualifier: VOLATILE .

    $default  reduce using rule 133 (type_qualifier)


State 19

  114 type_specifier: BOOL .

    $default  reduce using rule 114 (type_specifier)


State 20

  115 type_specifier: COMPLEX .

    $default  reduce using rule 115 (type_specifier)


State 21

  116 type_specifier: IMAGINARY .

    $default  reduce using rule 116 (type_specifier)


State 22

  220 external_declaration: declaration .

    $default  reduce using rule 220 (external_declaration)


State 23

   88 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
  221 function_definition: declaration_specifiers . declarator declaration_list_opt change_table CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 34
    MULTIPLY          shift, and go to state 35
    IDENTIFIER        shift, and go to state 36

    $default  reduce using rule 90 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   91 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   92 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  117 type_specifier: enum_specifier .

    $default  reduce using rule 117 (type_specifier)


State 27

   93 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   94 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 96 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  218 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31


State 30

  217 translation_unit: external_declaration .

    $default  reduce using rule 217 (translation_unit)


State 31

  219 external_declaration: function_definition .

    $default  reduce using rule 219 (external_declaration)


State 32

  124 enum_specifier: ENUM IDENTIFIER .
  125 identifier_opt: IDENTIFIER .

    CURLY_BRACE_OPEN  reduce using rule 125 (identifier_opt)
    $default          reduce using rule 124 (enum_specifier)


State 33

  122 enum_specifier: ENUM identifier_opt . CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  123               | ENUM identifier_opt . CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE

    CURLY_BRACE_OPEN  shift, and go to state 50


State 34

  138 direct_declarator: PARENTHESIS_OPEN . declarator PARENTHESIS_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 34
    MULTIPLY          shift, and go to state 35
    IDENTIFIER        shift, and go to state 36
